k8s/client-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
   name: client-deployment
spec:
   replicas: 3
   selector:
       matchLabels:
         component: web
   template:
     metadata:
        label:
         component: web
     spec:
        containers:
          - name: client
            image: vokidoki130/multi-client
            ports:
               - containerPort: 3000
